Stop blinking when focusing semaphore on iPhone

--- a/styles/semaphore.module.scss
+++ b/styles/semaphore.module.scss
@@ -17,6 +17,9 @@
     width: 100%;
     height: 100%;
   }
+  & * {
+    pointer-events: none;
+  }
 }
 
 .semaphore_button_1 {
